task(styles): fix user page on smaller screens

--- a/src/app/user/containers/user-page/user-page.component.scss
+++ b/src/app/user/containers/user-page/user-page.component.scss
@@ -1,5 +1,6 @@
 @import 'abstracts';
 
 button {
-  margin-right: $app-spacing-unit;
+  display: block;
+  margin-bottom: $app-spacing-unit;
 }
