--- a/src/styles/abstracts/_1-variables-colors.scss
+++ b/src/styles/abstracts/_1-variables-colors.scss
@@ -14,3 +14,4 @@ $app-color-bg-dark: #230211;
 $app-color-bg-gray: #fafbfc;
 
 $app-color-border: #dfe2e5;
+$app-color-border-strong: #c0c0c0;
