--- a/src/styles/abstracts/_1-variables.scss
+++ b/src/styles/abstracts/_1-variables.scss
@@ -1,3 +1,6 @@
+// Set to true to show current breakpoint / font size
+$debug-breakpoint-size: false;
+
 $body-font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 $font-family-monospace: 'Operator Mono', Consolas, 'Liberation Mono', 'Menlo', Courier, monospace;
 
