--- a/src/styles/atoms/_atoms-basics.scss
+++ b/src/styles/atoms/_atoms-basics.scss
@@ -127,7 +127,7 @@ legend {
  * Change the border, margin, and padding in all browsers (opinionated).
  */
 fieldset {
-  border: 1px solid #c0c0c0;
+  border: 1px solid $app-color-border-strong;
   margin: 0 0 $app-spacing-unit;
   padding: $app-spacing-unit;
 
